sign up page no longer wraps to two rows

--- a/css/traque.less
+++ b/css/traque.less
@@ -82,6 +82,11 @@ iframe {
   }
 }
 
+// TODO: This proably shouldn't be a table
+#myLogin table {
+  width: initial;
+}
+
 /**
  *.Plans
  */
